--- a/Tutorials/HowTo/Advanced/Particle/Index.htm
+++ b/Tutorials/HowTo/Advanced/Particle/Index.htm
@@ -128,7 +128,7 @@ normal">-1.5</b> looks good.</p>
             <b style="mso-bidi-font-weight:normal">Particle Viewer.</b><span style="mso-no-proof:
 yes">
             <img height="22" 
-                src="file:///C:/Users/Momo/AppData/Local/Temp/msohtmlclip1/01/clip_image012.jpg" 
+                src="" 
                 v:shapes="Picture_x0020_14" width="133" /><![endif]></span><b style="mso-bidi-font-weight:
 normal"><o:p></o:p></b></p>
         <p class="MsoNormal">
